resolves scrollbar sttyle for mobile - will need to bring it back on desktop

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,9 +18,6 @@ html {
   --yellow: #ffb81c;
   --brown: #782f40;
   --dark-brown: #4f1e2a;
-  /* hero */
-  --hero-background-color: #ffd42a;
-  --hero-content-color: rgb(55, 55, 55);
 
   /* pedidos */
   --pedidos-content-color: #33b333;
@@ -39,6 +36,10 @@ html {
    /* properties */
   --duration: 0.3s;
   --radius:4px;
+}
+::selection {
+  color: white;
+  background: var(--accent);
 }
 header {
   display: flex;
@@ -122,16 +123,14 @@ a:not(nav a):not(.info-item a):not(.opciones):not(.pedido-items
 nav {
   z-index: 2;
   position: sticky;
-  height: 50px;
   display: flex;
   align-items: center;
   top: 0;
-  background-color: var(--primary);
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 500;
   letter-spacing: 1.15pt;
-  border-bottom: 1px solid black;
+  
   margin-top: 1em;
   /* backdrop-filter: blur(10px); */
   /* box-shadow: 0 4px 5px rgba(0, 0, 0, 0.07); */
@@ -142,7 +141,7 @@ nav:before {
   position: absolute;
   height: 20px;
   width: 20px;
-  top: 14px;
+  top: 11px;
   z-index: 1;
 }
 nav:after {
@@ -159,6 +158,11 @@ nav > ul {
   margin-bottom: 0;
   overflow-x: scroll;
   scrollbar-width: none;
+  border-bottom: 1px solid black;
+  background-color: var(--primary);
+}
+nav > ul::-webkit-scrollbar {
+  display: none;
 }
 nav a {
   text-decoration: none;
